--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
     <link rel="icon" type="image/x-icon" href="img\favicon.ico">
     <!----======== CSS ======== -->
     <link rel="stylesheet" href="styles\sidebar.css">
+    <link rel="stylesheet" href="styles\tableaxies.CSS">
     <link rel="stylesheet" href="styles\bootstrap.min.css">
     <link rel="stylesheet" href="styles\home.css">
     <link rel="stylesheet" href="styles\globals.CSS">
-    <link rel="stylesheet" href="styles\tableAxies.CSS">
+
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
     <link href='https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css' rel='stylesheet'>
     
