--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/x-icon" href="img\favicon.ico">
+    <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico">
     <!----======== CSS ======== -->
     
-    <link rel="stylesheet" href="styles\tableaxies.css">
-    <link rel="stylesheet" href="styles\bootstrap.min.css">
-    <link rel="stylesheet" href="styles\home.css">
-    <link rel="stylesheet" href="styles\sidebar.css">
+    <link rel="stylesheet" href="assets/styles/bootstrap.min.css">
+    <link rel="stylesheet" href="assets/styles/globals.css">
+    <link rel="stylesheet" href="assets/styles/home.css">
+    <link rel="stylesheet" href="assets/styles/sidebar.css">
+    <link rel="stylesheet" href="assets/styles/tableaxies.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
     <link href='https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css' rel='stylesheet'>
     
@@ -227,12 +228,12 @@
         <!-- buttons -->
         <div class="ButtonsWrapper">
 
-            <img src="img/cards.png" class="icons"data-toggle="tooltip" data-placement="bottom" 
+            <img src="assets/img/cards.png" class="icons"data-toggle="tooltip" data-placement="bottom" 
             title="Press for -1 Card"onclick="subCard()"
             style="cursor:pointer">
             <span id="cardsQuantity" onclick="subCard()">
             6</span>  
-                <img class="icons"src="img\energyIcon.png">
+                <img class="icons"src="assets/img/energyIcon.png">
                 <span id="energyQuantity"class="">
                     03</span>/10
         </div>
@@ -276,8 +277,8 @@ toggle.addEventListener("click" , () =>{
 })
 
     </script>
-     <script src="js/energyCalculator.js"></script>
-     <script src="js/tableAxies.js"></script>
+     <script src="assets/js/energyCalculator.js"></script>
+     <script src="assets/js/tableAxies.js"></script>
    
 </body>
 
