--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico">
-    <!----======== CSS ======== -->
+     <!----======== CSS ======== -->
     <script src="assets/js/sidebar.js" type="text/javascript" async="false"></script>
     <link rel="stylesheet" href="assets/styles/bootstrap.min.css">
     <link rel="stylesheet" href="assets/styles/globals.css">
@@ -22,9 +21,73 @@
 <body onLoad="uncheckAll()">
 
     <!-- sidebar-->
-        <header-component></header-component>
-    <!-- end sidebar-->
+    <nav class="sidebar close"><header>
 
+        <div class="text logo-text">
+            <span class="name">Axie Infinity</span>
+            <span class="profession">PRO TRACKER</span>
+        </div>
+    </div>
+
+    <i class="bx bx-chevron-right toggle"></i>
+    </header>
+
+<div class="menu-bar">
+<div class="menu">
+
+    <ul class="menu-links">
+        <li class="nav-link">
+            <a href="index.html">
+                <i class='bx bx-home-alt icon' ></i>
+                <span class="text nav-text">Tracker</span>
+            </a>
+        </li>
+
+
+        </li>
+
+        <li class="nav-link">
+            <a href="https://axie.substack.com/p/upcoming-season-20-and-economic-balancing"target="_blank">
+                <i class='bx bxs-notepad icon' ></i>
+                <span class="text nav-text">Last Updates</span>
+            </a>
+        </li>
+
+  <li class="nav-link">
+      <a href="#">
+          <i class='bx bx-smile icon'></i>
+          <span class="text nav-text">How To Use</span>
+      </a>
+  </li>
+
+  <li class="nav-link">
+      <a href="#">
+          <i class='bx bxl-facebook icon'></i>
+          <span class="text nav-text">Facebook</span>
+      </a>
+  </li>
+
+  <li class="nav-link">
+      <a href="#">
+          <i class='bx bxl-twitter icon'></i>
+          <span class="text nav-text">Twitter</span>
+      </a>
+  </li>
+</ul>
+</div>
+
+<li class="mode">
+  <div class="sun-moon">
+      <i class='bx bx-moon icon moon'></i>
+      <i class='bx bx-sun icon sun'></i>
+  </div>
+  <span class="mode-text text">Dark mode</span>
+</li>
+
+    </div>
+    </div>
+</nav>
+    <!-- end sidebar-->
 
     <section class="home">
       
@@ -199,8 +262,13 @@
 
     <!--scripts-->
     <script>
- 
-
+                const body = document.querySelector('body'),
+                sidebar = body.querySelector('nav'),
+                toggle = body.querySelector(".toggle");
+                
+                toggle.addEventListener("click" , () =>{
+                sidebar.classList.toggle("close");
+                 } ) 
     </script>
      <script src="assets/js/energyCalculator.js"></script>
      <script src="assets/js/tableAxies.js"></script>
