--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-     <!----======== CSS ======== -->
+    <link rel="icon" type="image/x-icon" href="/assets/img/favicon.ico">
+    <!----======== CSS ======== -->
     <script src="assets/js/sidebar.js" type="text/javascript" async="false"></script>
     <link rel="stylesheet" href="assets/styles/bootstrap.min.css">
     <link rel="stylesheet" href="assets/styles/globals.css">
