--- a/index.html
+++ b/index.html
@@ -54,17 +54,17 @@
             </a>
         </li>
 
+        <li class="nav-link">
+            <a href="https://marketplace.axieinfinity.com/">
+                <i class='bx bxs-store icon'></i>
+                <span class="text nav-text">Axie Marktplace</span>
+            </a>
+        </li>
+
   <li class="nav-link">
       <a href="#">
           <i class='bx bx-smile icon'></i>
           <span class="text nav-text">How To Use</span>
-      </a>
-  </li>
-
-  <li class="nav-link">
-      <a href="#">
-          <i class='bx bxl-facebook icon'></i>
-          <span class="text nav-text">Facebook</span>
       </a>
   </li>
 
