--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         </li>
 
         <li class="nav-link">
-            <a href="https://marketplace.axieinfinity.com/">
+            <a href="https://marketplace.axieinfinity.com/" target="_blank">
                 <i class='bx bxs-store icon'></i>
                 <span class="text nav-text">Axie Marktplace</span>
             </a>
