--- a/indexpt-br.html
+++ b/indexpt-br.html
@@ -19,7 +19,7 @@
     
     <title>Axie PRO Tracker</title> 
 </head>
-<body onLoad="uncheckAll();">
+<body>
 
     <!-- sidebar-->
     <nav class="sidebar close"><header>
