--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
     <link rel="stylesheet" href="assets/styles/tableaxies.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
     <link href='https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css' rel='stylesheet'>
-     <title>Axie PRO Tracker</title> 
+     <script src="assets/js/language.js" type="text/javascript"refer></script> 
+    <title>Axie PRO Tracker</title> 
 
 </head>
 <body>
