--- a/index.html
+++ b/index.html
@@ -69,13 +69,13 @@
   </li>
 
   <li class="nav-link">
-      <a href="https://coinmarketcap.com/pt-br/currencies/smooth-love-potion/">
+      <a href="https://coinmarketcap.com/pt-br/currencies/smooth-love-potion/"target="_blank">
         <i class='bx bx-coin-stack icon'></i>
           <span class="text nav-text">SLP</span>
       </a>
   </li>
   <li class="nav-link">
-    <a href="https://coinmarketcap.com/pt-br/currencies/axie-infinity/">
+    <a href="https://coinmarketcap.com/pt-br/currencies/axie-infinity/"target="_blank">
         <i class='bx bxs-coin-stack icon'></i>
         <span class="text nav-text">AXS</span>
     </a>
