--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                             Mouth</td>
                         <td   data-toggle="tooltip" data-placement="bottom" title="Press for -1 Card"class="axie1" onclick="toggleA1M1();subCard();"><i class=" fas fa-times" id="a1m1"></i></td>
                         <td   data-toggle="tooltip" data-placement="bottom" title="Press for -1 Card"class="axie1" onclick="toggleA1M2();subCard();"><i class="fas fa-times" id="a1m2"></i>
-                        <td><input type="number" id="danoBoca1" name="danoBoca1" size="6"placeholder="100" ></td>
+                        <td><input type="text" id="danoBoca1" name="danoBoca1" size="6"placeholder="100" ></td>
                         </td>
                     </tr>
                     <tr>
